# templates

./: LICENSE  README.md  cargo-generate.toml  flake.nix
empty/: README.md  flake.nix
rust_config_async/nix/: flake.nix
rust_config_async/rust/: Cargo.toml  cargo-generate.toml
rust_config_async/rust/src/: config.rs  main.rs
typescript/nix/: flake.nix
