[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = [ "{{ authors }}" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"

futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

anyhow = "1.0"
clap = { version = "4.5", features = [ "derive" ] }
envy = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
figment = { version = "0.10", features = [ "env", "yaml" ] }

